--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="TextView" parent="android:Widget.TextView" />
+
     <!-- Pretendard -->
-    <style name="TextView.Pretendard.Light">
+    <style name="TextView.Pretendard" parent="TextView" />
+
+    <style name="TextView.Pretendard.Light" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_light</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="TextView.Pretendard.Regular">
+    <style name="TextView.Pretendard.Regular" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_regular</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="TextView.Pretendard.Medium">
+    <style name="TextView.Pretendard.Medium" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="TextView.Pretendard.SemiBold">
+    <style name="TextView.Pretendard.SemiBold" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_semibold</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="TextView.Pretendard.Bold">
+    <style name="TextView.Pretendard.Bold" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
     <!-- Esamanru -->
-    <style name="TextView.Esamanru.Light">
+    <style name="TextView.Esamanru" parent="TextView" />
+
+    <style name="TextView.Esamanru.Light" parent="TextView.Esamanru">
         <item name="android:fontFamily">@font/esamanru_light</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="TextView.Esamanru.Medium">
+    <style name="TextView.Esamanru.Medium" parent="TextView.Esamanru">
         <item name="android:fontFamily">@font/esamanru_medium</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="TextView.Esamanru.Bold">
+    <style name="TextView.Esamanru.Bold" parent="TextView.Esamanru">
         <item name="android:fontFamily">@font/esamanru_bold</item>
         <item name="android:textColor">@color/black</item>
     </style>
