design: 통계 Fragment TabLayout 구현
- TabLayout 관련 drawable 리소스 추가
  - tab_selected_stats.xml: 선택된 탭의 배경
  - tab_bg_primary100.xml: TabLayout 전체 배경

--- a/android/app/src/main/res/layout/fragment_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stats.xml
@@ -1,11 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.stats.StatsFragment">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_stats"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/tab_bg_primary100"
+            android:paddingVertical="6dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabBackground="@drawable/tab_bg_primary100"
+            app:tabIndicator="@drawable/tab_selected_stats"
+            app:tabIndicatorColor="@color/primary500"
+            app:tabIndicatorFullWidth="true"
+            app:tabIndicatorGravity="stretch"
+            app:tabMode="fixed"
+            app:tabRippleColor="@null"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextAppearance="@style/TextView.Pretendard.SemiBold.18"
+            app:tabTextColor="@color/primary700">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tab_stats_my_stats" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tab_stats_stadium_stats" />
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fcv_stats_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tab_stats" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
