--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -30,6 +30,10 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="TextView.Pretendard.SemiBold.18" parent="TextView.Pretendard.SemiBold">
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="TextView.Pretendard.Bold" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textColor">@color/black</item>
