--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -35,7 +35,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/btn_check_in"
+            android:id="@+id/cv_check_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
@@ -46,6 +46,7 @@
             app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_check_in"
                 style="@style/TextView.Pretendard.Bold.20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
                 android:textColor="@color/white"
                 app:icon="@drawable/ic_marker_pin"
                 app:iconGravity="textStart"
+                app:iconPadding="8dp"
                 app:iconSize="24dp"
                 app:iconTint="@color/white"
                 app:rippleColor="@android:color/transparent" />
@@ -70,7 +72,7 @@
             android:paddingVertical="16dp"
             app:layout_constraintEnd_toStartOf="@id/constraint_total_attendance"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_check_in">
+            app:layout_constraintTop_toBottomOf="@id/cv_check_in">
 
             <TextView
                 android:id="@+id/tv_team"
