--- a/android/app/src/main/res/layout/fragment_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stats.xml
@@ -15,10 +15,10 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/tab_bg_primary100"
+            android:background="@drawable/tab_bg_primary050_stroke_primary100"
             android:paddingVertical="6dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:tabBackground="@drawable/tab_bg_primary100"
+            app:tabBackground="@color/primary050"
             app:tabIndicator="@drawable/tab_selected_stats"
             app:tabIndicatorColor="@color/primary500"
             app:tabIndicatorFullWidth="true"
