--- a/android/app/src/main/res/layout/view_tab_stats.xml
+++ b/android/app/src/main/res/layout/view_tab_stats.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/tab_text"
+    <TextView
+        android:id="@+id/tv_tab_text"
         style="@style/TextView.Pretendard.SemiBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
