feat: 내 통계의 승리 무승부 패배 정보 레이아웃 추가

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -38,4 +38,7 @@
     <color name="team_hanwha">#FFFC4E00</color>
     <color name="team_nc">#FF315288</color>
     <color name="team_kiwoom">#FF570514</color>
+
+    <!-- Figma Colors -->
+    <color name="figma_red">#FFFF2C2C</color>
 </resources>
