--- a/android/app/src/main/res/layout/fragment_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stats.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tab_stats" />
+            app:layout_constraintTop_toBottomOf="@id/tab_stats" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
