--- a/android/app/src/main/res/layout/fragment_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stats.xml
@@ -27,8 +27,8 @@
             app:tabRippleColor="@null"
             app:tabTextColor="@color/primary700" />
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fcv_stats_fragment"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_stats_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
